--- a/development.ini
+++ b/development.ini
@@ -16,7 +16,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = postgresql://ode:ode@localhost/ode
+sqlalchemy.url = sqlite:///%(here)s/db.sqlite
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
